# OmniaFramework

./: .clangd  .gitignore  CMakeLists.txt  README.md  build  changelog.txt  compile  install  temp_install.sh
.zed/: tasks.json
Release/include/ostd/: Color.hpp  Console.hpp  Defines.hpp  Errors.hpp  Geometry.hpp  IOHandlers.hpp  Serial.hpp  Signals.hpp  String.hpp  TextStyleParser.hpp  Types.hpp  Utils.hpp
extra/: DefaultTheme.oss  DefaultThemeDark.oss  make_and_run  testMidiFile.mid  testQuery.oq  testTheme.oss  testTheme.txt
extra/models/: cube3.ox3d  monkey2.ox3d
extra/other/: tileset.xcf
extra/shaders/: basicShader.fs  basicShader.vs  lightShader.vs  screenPlane.fs  screenPlane.vs  skybox.fs  skybox.vs
licences/: SDL2_gfx-LICENCE.txt  libgcc-LICENCE.txt
other/: TODO.txt  changelog.txt  create_release.sh  install_release.sh  oss description.txt  test.txt
src/: test.cpp
src/ogfx/: Animation.cpp  Animation.hpp  BasicRenderer.cpp  BasicRenderer.hpp  BitmapFont.cpp  BitmapFont.hpp  BlendRenderer.cpp  BlendRenderer.hpp  Camera.cpp  Camera.hpp  DataStructures.hpp  DebugTools.cpp  DebugTools.hpp  Errors.cpp  Errors.hpp  FontUtils.cpp  FontUtils.hpp  GLBuffers.cpp  GLBuffers.hpp  GraphicsApplication.cpp  GraphicsApplication.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  OX3DLoader.cpp  OX3DLoader.hpp  PixelRenderer.cpp  PixelRenderer.hpp  RTData.cpp  RTData.hpp  RawTextInput.cpp  RawTextInput.hpp  RenderCommands.cpp  RenderCommands.hpp  RenderCore.cpp  RenderCore.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer2D.cpp  (+17 more)
src/ogfx/gui/: ContextMenu.cpp  ContextMenu.hpp  Events.hpp  FocusManager.cpp  FocusManager.hpp  GuiWindow.cpp  GuiWindow.hpp  Layout.cpp  Layout.hpp  LayoutHint.hpp  MenuBar.cpp  MenuBar.hpp  RawTextInput.cpp  RawTextInput.hpp  Themes.hpp  ToolBar.cpp  ToolBar.hpp  Widget.cpp  Widget.hpp  WidgetManager.cpp  WidgetManager.hpp  Widgets.cpp  Widgets.hpp  Window.cpp  Window.hpp  WindowBase.cpp  WindowBase.hpp  WindowBaseOutputHandler.cpp  WindowBaseOutputHandler.hpp  WindowOutputHandler.cpp  WindowOutputHandler.hpp
src/ogfx/gui/widgets/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  ColorPicker.cpp  ColorPicker.hpp  ColorPickerSkins.cpp  ColorPickerSkins.hpp  ComboBox.cpp  ComboBox.hpp  Containers.cpp  Containers.hpp  Label.cpp  Label.hpp  ListView.cpp  ListView.hpp  ProgressBar.cpp  ProgressBar.hpp  RadioButton.cpp  RadioButton.hpp  RootWidget.cpp  RootWidget.hpp  Scrollbar.cpp  Scrollbar.hpp  Slider.cpp  Slider.hpp  Text.cpp  Text.hpp  TreeView.cpp  TreeView.hpp  Widget.cpp  Widget.hpp
src/ogfx/render/: BasicRenderer.cpp  BasicRenderer.hpp  FontGlyphAtlas.cpp  FontGlyphAtlas.hpp  FontUtils.cpp  FontUtils.hpp  PixelRenderer.cpp  PixelRenderer.hpp
src/ogfx/resources/: Image.cpp  Image.hpp  UbuntuMonoRegularTTF.cpp  UbuntuMonoRegularTTF.hpp  UbuntuTTF.cpp  UbuntuTTF.hpp
src/ogfx/static_resources/: BasicShadowTexture.hpp  StateGradient.hpp  default_bitmap_font.hpp  default_icon_64.hpp  default_light_texture.hpp  default_shaders.hpp
src/ogfx/utils/: Animation.cpp  Animation.hpp  Keycodes.hpp  SDLInclude.hpp
src/ostd/: BaseObject.cpp  BaseObject.hpp  Bitfields.hpp  Color.cpp  Color.hpp  Console.cpp  Console.hpp  DataFile.cpp  DataFile.hpp  Defines.hpp  Errors.cpp  Errors.hpp  File.cpp  File.hpp  FileSystem.cpp  Geometry.cpp  Geometry.hpp  IOHandlers.hpp  Json.cpp  Json.hpp  Keyboard.cpp  Logger.cpp  Logger.hpp  Logic.cpp  Logic.hpp  Midi.cpp  Midi.hpp  OutputHandlers.cpp  PathFinder.cpp  PathFinder.hpp  QuadTree.cpp  QuadTree.hpp  Random.cpp  Random.hpp  RichString.cpp  RichString.hpp  Serial.cpp  Serial.hpp  ShuntingYard.cpp  Signals.cpp  (+17 more)
src/ostd/data/: AnimationData.hpp  BaseObject.cpp  BaseObject.hpp  Bitfields.hpp  Color.cpp  Color.hpp  Types.hpp
src/ostd/data_types/: BaseObject.cpp  BaseObject.hpp  Color.cpp  Color.hpp
src/ostd/io/: Console.cpp  Console.hpp  Errors.cpp  Errors.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  IOHandlers.hpp  Json.cpp  Json.hpp  Keyboard.cpp  Logger.cpp  Logger.hpp  Memory.cpp  Memory.hpp  Midi.cpp  Midi.hpp  OutputHandlers.cpp  Serial.cpp  Serial.hpp  StaticHashMap.hpp  Stylesheet.cpp  Stylesheet.hpp
src/ostd/io/database/: Lexer.cpp  Lexer.hpp
src/ostd/math/: Geometry.cpp  Geometry.hpp  MathUtils.cpp  MathUtils.hpp  Random.cpp  Random.hpp  ShuntingYard.cpp  SineWave.cpp  SineWave.hpp  Spline.cpp  Spline.hpp
src/ostd/string/: String.cpp  String.hpp  TextBuffer.cpp  TextBuffer.hpp  TextStyleParser.cpp  TextStyleParser.hpp  utf8.cpp
src/ostd/utils/: Async.hpp  Defines.hpp  Hash.cpp  Hash.hpp  Logic.cpp  Logic.hpp  PathFinder.cpp  PathFinder.hpp  QuadTree.cpp  QuadTree.hpp  Signals.cpp  Signals.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp  md5.cpp
src/test/: GraphicsWindowTest.cpp  GuiTest.cpp  TestApp2D.cpp  TestApp2D.hpp  TestApp3D.cpp  TestApp3D.hpp  TetrisApp.cpp  TetrisApp.hpp  TextBufferUnitTest.cpp  main.cpp
tools/: create_includes.py  inc_bnr
